--- a/src/main/web-app/familySearch.html
+++ b/src/main/web-app/familySearch.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<link href="libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="css/familySearch.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-layy
+	<div class="grid">
+		<div class="row">
+			<div class="span12 span-bkg-color1">Header</div>
+			<div class="row-fluid">
+				<div class="span12 span-bkg-color">Primary Navigation</div>
+			</div>
+		</div>
+		<div class="row ">
+			<div class="span12 span-bkg-color2 ">Family Search</div>
+			<div class="row-fluid">
+				<div class="span12 span-bkg-color">Footer</div>
+			</div>
+		</div>
+	</div>
+
 </body>
 </html>
