--- a/src/main/web-app/index.html
+++ b/src/main/web-app/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+	<meta charset="ISO-8859-1">
+	<title>Main Page: My family</title>
+
+	<link href="css/bootstrap.css" type="text/css" rel="stylesheet" />
+	<link href="css/index.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-sup girl
-what it do?
-hi
+	<div class="grid">
+		<div class="row-fluid">
+			<div class="span12 color">header</div>
+		</div>
+		   
+		<div class="row-fluid">
+			<div class="span12 color2">primary navigation</div>
+		</div>
+		<div class="row-fluid">
+			<div class="span12 color3">
+				body
+				<div class="row-fluid rowsetting">
+					<div class="span4 color4">Family search</div>
+					<div class="span4 color5">Join us</div>
+					<div class="span4 color6">Upcoming Events</div>
+				</div>
+			</div>
+		</div>
+		<div class="row-fluid">
+			<div class="span12 color7">footer</div>
+		</div>
+	</div>
+	<script src="libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
 </html>
