preparing to keep only on family search.

--- a/src/main/web-app/familySearch2.html
+++ b/src/main/web-app/familySearch2.html
@@ -11,7 +11,7 @@
 				<div class="span12 span-bkg-color">Primary Navigation</div>
 			</div>
 	</div>
-	<div id="header-container" class="row">
+	<div id="body-container" class="row">
 		<div class="span12 span-bkg-color2 ">
 			<form>
 				First Name: <input type="text" name="firstname"><br>
