--- a/src/main/web-app/index.html
+++ b/src/main/web-app/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="ISO-8859-1">
-	<title>Main Page: My family</title>
+	<head>
+		<meta charset="ISO-8859-1">
+		<title>Main Page: My Family</title>
 
-	<link href="css/bootstrap.css" type="text/css" rel="stylesheet" />
-	<link href="css/index.css" type="text/css" rel="stylesheet"/>
-</head>
-<body>
-	<div class="grid">
-		<div class="row-fluid">
-			<div class="span12 color">header</div>
-		</div>
-		   
-		<div class="row-fluid">
-			<div class="span12 color2">primary navigation</div>
-		</div>
-		<div class="row-fluid">
-			<div class="span12 color3">
-				body
-				<div class="row-fluid rowsetting">
-					<div class="span4 color4">Family search</div>
-					<div class="span4 color5">Join us</div>
-					<div class="span4 color6">Upcoming Events</div>
-				</div>
+		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" />
+		<link href="css/index.css" type="text/css" rel="stylesheet"/>
+		<link href="css/main-layout.css" type="text/css" rel="stylesheet"/>
+	</head>
+	<body>
+	<div id="header-container" class="row-fluid">
+		<div class="span12">Header</div>
+	</div>
+	<div id="primary-navigation-container" class="row-fluid">
+		<div class="span12">Primary navigation</div>
+	</div>
+	<div id="body-container" class="row-fluid">
+		<div class="span12"> 
+			Body
+			<div class="row-fluid nestedcontent">
+				<div class="span4 family">Family Search</div>
+				<div class="span4 join">Join Us</div>
+				<div class="span4 upcoming">Upcoming Events</div>
 			</div>
 		</div>
-		<div class="row-fluid">
-			<div class="span12 color7">footer</div>
-		</div>
 	</div>
-	<script src="libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
-</body>
+	<div id="footer-container" class="row-fluid">
+		<div class="span12">Footer</div>
+	</div>
+			
+
+	</body>
 </html>
