Added "Foot-Container" to my familySearch.html

--- a/src/main/web-app/familySearch.html
+++ b/src/main/web-app/familySearch.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-<link href="css/familySearch2.css" rel="stylesheet" type="text/css" />
+<link href="libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css"
+	rel="stylesheet" type="text/css" />
+<link href="css/familySearch.css" rel="stylesheet" type="text/css" />
+<link href="css/main-layout.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	<div id="header-container" class="row">
 		<div class="span12 span-bkg-color1">Header</div>
-			<div class="row-fluid">
-				<div class="span12 span-bkg-color">Primary Navigation</div>
-			</div>
+		<div class="row-fluid">
+			<div class="span12 span-bkg-color">Primary Navigation</div>
+		</div>
 	</div>
 	<div id="body-container" class="row">
 		<div class="span12 span-bkg-color2 ">
@@ -17,9 +19,8 @@
 				First Name: <input type="text" name="firstname"><br>
 				Last Name: <input type="text" name="lastname"><br>
 				Middle Name: <input type="text" name="middlename"><br>
-				Age: <input type="text" name="text"><br>
-				State: <name="state">
-				<select>
+				Age: <input type="text" name="text"><br> State:
+				<name="state"> <select>
 					<option value="choose">choose</option>
 					<option value="AL">AL</option>
 					<option value="AK">AK</option>
@@ -71,17 +72,22 @@
 					<option value="WV">WV</option>
 					<option value="WI">WI</option>
 					<option value="WY">WY</option>
-				</select><br>
-				City: <input type="text" name="city"><br>
-				Zip Code: <input type="text" name="zip code"><br>
-				Region: <input type="text" name="region"><br>
+				</select>
+				<br>
+				City: <input type="text" name="city">
+				<br>
+				Zip Code: <input type="text" name="zip code">
+				<br>
+				Region: <input type="text" name="region">
+				<br>
 				<input type="button" value="search">
 			</form>
-			
 		</div>
-			<div class="row-fluid">
-				<div class="span12 span-bkg-color">Footer</div>
-			</div>
+	</div>
+	<div id="footer-container" class="row">
+		<div class="row-fluid">
+			<div class="span12 span-bkg-color">Footer</div>
+		</div>
 	</div>
 </body>
 </html>
