--- a/src/main/web-app/index.html
+++ b/src/main/web-app/index.html
@@ -4,29 +4,30 @@
 		<meta charset="ISO-8859-1">
 		<title>Main Page: My Family</title>
 
-		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" />
+		<link href="libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 		<link href="css/index.css" type="text/css" rel="stylesheet"/>
 		<link href="css/main-layout.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body>
-	<div id="header-container" class="row-fluid">
-		<div class="span12">Header</div>
+	<div id="header-container" class="row">
+		<div class="col-md-12">Header</div>
 	</div>
-	<div id="primary-navigation-container" class="row-fluid">
-		<div class="span12">Primary navigation</div>
+	<div id="primary-navigation-container" class="row">
+		<div class="col-md-12">Primary navigation</div>
 	</div>
-	<div id="body-container" class="row-fluid">
-		<div class="span12"> 
+	
+	<div id="body-container" class="row">
+		<div class="col-md-12"> 
 			Body
 			<div class="row-fluid nestedcontent">
-				<div class="span4 family">Family Search</div>
-				<div class="span4 join">Join Us</div>
-				<div class="span4 upcoming">Upcoming Events</div>
+				<div class="col-md-4 family ">Family Search</div>
+				<div class="col-md-4 join ">Join Us</div>
+				<div class="col-md-4 upcoming ">Upcoming Events</div>
 			</div>
 		</div>
 	</div>
-	<div id="footer-container" class="row-fluid">
-		<div class="span12">Footer</div>
+	<div id="footer-container" class="row">
+		<div class="col-md-12">Footer</div>
 	</div>
 			
 
