--- a/src/main/web-app/joinus.html
+++ b/src/main/web-app/joinus.html
@@ -4,21 +4,21 @@
 		<meta charset="ISO-8859-1">
 		<title>My Family: Join Us</title>
 		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" />
-		<link href="css/joinus.css" type="text/css" rel="stylesheet"/>
-		<link href="css/index2.css" type="text/css" rel="stylesheet"/>
+		<link href="css/index.css" type="text/css" rel="stylesheet"/>
+		<link href="css/main-layout.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body>
-		<div id="header" class="row-fluid">
-			<div class="span12 header">Header</div>
-			<div class="row-fluid">
-			<div class="span12 primary">Primary navigation</div>
+		<div id="header-container" class="row-fluid">
+			<div class="span12 ">Header</div>
 		</div>
+			<div id= "primary-navigation-container"class="row-fluid">
+			<div class="span12 ">Primary navigation</div>
 		</div>
-		<div id="body" class="row-fluid">
-			<div class="span12 body2">Join us Form</div>
+		<div id="body-container" class="row-fluid">
+			<div class="span12 ">Join us Form</div>
 		</div>
-		<div id="footer" class="row-fluid">
-			<div class="span12 footer">Footer</div>
+		<div id="footer-container" class="row-fluid">
+			<div class="span12">Footer</div>
 		</div>
 
 	</body>
