Moved nested content underneath body, updated join us and main page to have class"container-fluid"

--- a/src/main/web-app/index.html
+++ b/src/main/web-app/index.html
@@ -9,25 +9,34 @@
 		<link href="css/main-layout.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body>
-	<div id="header-container" class="row">
-		<div class="col-md-12">Header</div>
+	<div id="header-container" class="container-fluid">
+		<div class="row">
+			<div class="col-md-12">Header</div>
+		</div>
 	</div>
-	<div id="primary-navigation-container" class="row">
-		<div class="col-md-12">Primary navigation</div>
+	<div id="primary-navigation-container" class="container-fluid">
+		<div class="row">
+			<div class="col-md-12">Primary navigation</div>
+		</div>
 	</div>
 	
-	<div id="body-container" class="row">
+	<div id="body-container" class="container-fluid">
+	 body
+	</div>
+	  <div class="row">
 		<div class="col-md-12"> 
-			Body
-			<div class="row-fluid nestedcontent">
-				<div class="col-md-4 family ">Family Search</div>
+			<div class="row nestedcontent">
+				<div class="col-md-4 family">Family Search</div>
 				<div class="col-md-4 join ">Join Us</div>
 				<div class="col-md-4 upcoming ">Upcoming Events</div>
 			</div>
 		</div>
-	</div>
-	<div id="footer-container" class="row">
-		<div class="col-md-12">Footer</div>
+	 </div>
+
+	<div id="footer-container" class="container-fluid">
+		<div class="row">
+			<div class="col-md-12">Footer</div>
+		</div>
 	</div>
 			
 
