--- a/src/main/web-app/joinus.html
+++ b/src/main/web-app/joinus.html
@@ -8,17 +8,26 @@
 		<link href="css/main-layout.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body>
-		<div id="header-container" class="row-fluid">
-			<div class="span12 ">Header</div>
+		<div id="header-container" class="container-fluid">
+			<div class="row">
+				<div class="col-md-12">Header</div>
+			</div>
 		</div>
-			<div id= "primary-navigation-container"class="row-fluid">
-			<div class="span12 ">Primary navigation</div>
+		<div id="primary-navigation-container" class="container-fluid">
+			<div class="row">
+				<div class="col-md-12">Primary navigation</div>
+			</div>
 		</div>
-		<div id="body-container" class="row-fluid">
-			<div class="span12 ">Join us Form</div>
+		<div id="body-container" class="container-fluid">
+	  		<div class="row">
+				<div class="col-md-12">Join us form</div>
+			</div>
 		</div>
-		<div id="footer-container" class="row-fluid">
-			<div class="span12">Footer</div>
+		
+		<div id="footer-container" class="container-fluid">
+			<div class="row">
+				<div class="span12">Footer</div>
+			</div>
 		</div>
 
 	</body>
