I have added a link form the main page to familySearch.

--- a/src/main/web-app/index.html
+++ b/src/main/web-app/index.html
@@ -26,7 +26,9 @@
 	  <div class="row">
 		<div class="col-md-12"> 
 			<div class="row nestedcontent">
-				<div class="col-md-4 family">Family Search</div>
+				<div class="col-md-4 family">
+					<a href="file:///C:/Users/malayshia/git/byte-pushers/myfamily/src/main/web-app/familySearch.html">My Family Search</a>
+				</div>
 				<div class="col-md-4 join ">Join Us</div>
 				<div class="col-md-4 upcoming ">Upcoming Events</div>
 			</div>
