--- a/src/main/web-app/index.html
+++ b/src/main/web-app/index.html
@@ -29,7 +29,9 @@
 				<div class="col-md-4 family">
 					<a href="file:///C:/Users/malayshia/git/byte-pushers/myfamily/src/main/web-app/familySearch.html">My Family Search</a>
 				</div>
-				<div class="col-md-4 join ">Join Us</div>
+				<div class="col-md-4 join ">
+					<a href="joinus.html" target="_blank"> Join us </a>
+				</div>
 				<div class="col-md-4 upcoming ">Upcoming Events</div>
 			</div>
 		</div>
