Re-typed my link.

--- a/src/main/web-app/familySearch.html
+++ b/src/main/web-app/familySearch.html
@@ -19,7 +19,7 @@
 	</div>
 	<div id="body-container" class="row-fluid">
 		<div id="family-search-container" class="row-fluid">
-			<div id="search-form-container" class="row-fluid">
+			<div id="search-form-container" class="row-fluid" class="span12">Family Search
 				<form>
 					<div class="col-md-2 col-md-offset-2">
 						First Name: <input type="text" name="firstname">
