--- a/src/main/web-app/index.html
+++ b/src/main/web-app/index.html
@@ -27,7 +27,7 @@
 		<div class="col-md-12"> 
 			<div class="row nestedcontent">
 				<div class="col-md-4 family">
-					<a href="file:///C:/Users/malayshia/git/byte-pushers/myfamily/src/main/web-app/familySearch.html">My Family Search</a>
+					<a href="familySearch.html">My Family Search</a>
 				</div>
 				<div class="col-md-4 join ">
 					<a href="joinus.html" target="_blank"> Join us </a>
