Updated my Family Search Results.

--- a/src/main/web-app/familySearch.html
+++ b/src/main/web-app/familySearch.html
@@ -19,16 +19,17 @@
 	</div>
 	<div id="body-container" class="row-fluid">
 		<div id="family-search-container" class="row-fluid">
-			<div id="search-form-container" class="row-fluid" class="span12">Family Search
+			<div id="search-form-container" class="row-fluid" class="span12">
+				Family Search
 				<form>
 					<div class="col-md-2 col-md-offset-2">
 						First Name: <input type="text" name="firstname">
 					</div>
 					<div class="col-md-2">
-						Last Name: <input type="text" name="lastname">
+						Middle Name: <input type="text" name="lastname">
 					</div>
 					<div class="col-md-2">
-						Middle Name: <input type="text" name="middlename">
+						Last Name: <input type="text" name="middlename">
 					</div>
 					<div class="col-md-2">
 						Age: <input type="text" name="text">
@@ -102,40 +103,65 @@
 					</div>
 					<br>
 				</form>
-				<div id="my_table">
-					<div class="col-md-2 col-md-offset-1 	">
-						<table style="margin-top: 160px; margin-left: 250px;">
-							<tr>
-								<td></td>
-								<td></td>
-								<td></td>
-								<td></td>
-								<td></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td></td>
-								<td></td>
-								<td></td>
-								<td></td>
-								<td></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td></td>
-								<td></td>
-								<td></td>
-								<td></td>
-								<td></td>
-								<td></td>
-							</tr>
-						</table>
-						<br>
-					</div>
-				</div>
+				<br>
+				
+				<table style="width: 1336px">
+					<tr>
+						<td></td>
+						<td><b>First Name</b></td>
+						<td><b>Middle Name</b></td>
+						<td><b>Last Name</b></td>
+						<td><b>Age</b></td>
+						<td><b>City</b></td>
+						<td><b>Zip Code</b></td>
+						<td><b>Region</b></td>
+					</tr>
+					<tr>
+						<td><b>1</b></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td><b>2</b></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td><b>3</b></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td><b>4</b></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
+				<br>
 			</div>
 		</div>
 	</div>
+	
 
 
 
