Started form on "join us" page, added first, middle, and last name elements along with birthday: month, day, and year. Added a link to my join us page on main page. Deleted bootstrap.css from main css file.

--- a/src/main/web-app/index.html
+++ b/src/main/web-app/index.html
@@ -30,7 +30,7 @@
 					<a href="familySearch.html">My Family Search</a>
 				</div>
 				<div class="col-md-4 join ">
-					<a href="joinus.html" target="_blank"> Join us </a>
+					<a href="joinus.html"> Join us </a>
 				</div>
 				<div class="col-md-4 upcoming ">Upcoming Events</div>
 			</div>
