--- a/src/main/web-app/joinus.html
+++ b/src/main/web-app/joinus.html
@@ -20,10 +20,26 @@
 		</div>
 		<div id="body-container" class="container-fluid">
 	  		<div class="row">
-				<div class="col-md-12">Join us form</div>
+				<div class="col-md-12">Join us
+					<form class="form-inline linsep">
+							<label for="name">Name: </label>
+							<input type="text" id="name"
+							placeholder="First">
+							<input type="text" id="name"
+							placeholder="Middle">
+							<input type="text" id="name"
+							placeholder="Last">
+							<label for="birthday">Birthday: </label>
+							<input type="text" id="month"
+							placeholder="Month">
+							<input type="text" id="day"
+							placeholder="Day">
+							<input type="text" id="year"
+							placeholder="Year">
+					</form>
+				</div>
 			</div>
 		</div>
-		
 		<div id="footer-container" class="container-fluid">
 			<div class="row">
 				<div class="span12">Footer</div>
