--- a/src/main/web-app/familySearch.html
+++ b/src/main/web-app/familySearch.html
@@ -19,149 +19,165 @@
 	</div>
 	<div id="body-container" class="row-fluid">
 		<div id="family-search-container" class="row-fluid">
-			<div id="search-form-container" class="row-fluid" class="span12">
-				Family Search
-				<form>
-					<div class="col-md-2 col-md-offset-2">
-						First Name: <input type="text" name="firstname">
+			<div id="search-form-container" class="row-fluid">
+				<div class="row-fluid">
+					<div class="col-md-12">
+						<h3>Family Search</h3>
 					</div>
-					<div class="col-md-2">
-						Middle Name: <input type="text" name="lastname">
-					</div>
-					<div class="col-md-2">
-						Last Name: <input type="text" name="middlename">
-					</div>
-					<div class="col-md-2">
-						Age: <input type="text" name="text">
-					</div>
-					<br>
-					<div class="col-md-2 col-md-offset-2">
-						<name="state">States <select>
+				</div>
+				<div class="row-fluid">
+					<form>
+						<div class="col-md-2 col-md-offset-2">
+							First Name: <input type="text" name="firstname">
+						</div>
+						<div class="col-md-2">
+							Middle Name: <input type="text" name="lastname">
+						</div>
+						<div class="col-md-2">
+							Last Name: <input type="text" name="middlename">
+						</div>
+						<div class="col-md-2">
+							Age: <input type="text" name="text">
+						</div>
+					</form>
+				</div>
+				<br>
+				<div class="row-fluid">
+					<form>
+						<div class="col-md-2 col-md-offset-2">
+							<name="state">States <select>
 
-							<option value="choose">choose</option>
-							<option value="AL">AL</option>
-							<option value="AK">AK</option>
-							<option value="AZ">AZ</option>
-							<option value="AR">AR</option>
-							<option value="CA">CA</option>
-							<option value="CO">CO</option>
-							<option value="CT">CT</option>
-							<option value="DE">DE</option>
-							<option value="FL">FL</option>
-							<option value="GA">GA</option>
-							<option value="HI">HI</option>
-							<option value="ID">ID</option>
-							<option value="IL">IL</option>
-							<option value="IN">IN</option>
-							<option value="IA">IA</option>
-							<option value="KS">KS</option>
-							<option value="KY">KY</option>
-							<option value="LA">LA</option>
-							<option value="ME">ME</option>
-							<option value="MD">MD</option>
-							<option value="MA">MA</option>
-							<option value="MI">MI</option>
-							<option value="MN">MN</option>
-							<option value="MS">MS</option>
-							<option value="MO">MO</option>
-							<option value="MT">MT</option>
-							<option value="NE">NE</option>
-							<option value="NV">NV</option>
-							<option value="NH">NH</option>
-							<option value="NJ">NJ</option>
-							<option value="NM">NM</option>
-							<option value="NY">NY</option>
-							<option value="NC">NC</option>
-							<option value="ND">ND</option>
-							<option value="OH">OH</option>
-							<option value="OK">OK</option>
-							<option value="OR">OR</option>
-							<option value="PA">PA</option>
-							<option value="RI">RI</option>
-							<option value="SC">SC</option>
-							<option value="SD">SD</option>
-							<option value="TN">TN</option>
-							<option value="TX">TX</option>
-							<option value="UT">UT</option>
-							<option value="VT">VT</option>
-							<option value="VA">VA</option>
-							<option value="WA">WA</option>
-							<option value="WV">WV</option>
-							<option value="WI">WI</option>
-							<option value="WY">WY</option>
-						</select>
+								<option value="choose">choose</option>
+								<option value="AL">AL</option>
+								<option value="AK">AK</option>
+								<option value="AZ">AZ</option>
+								<option value="AR">AR</option>
+								<option value="CA">CA</option>
+								<option value="CO">CO</option>
+								<option value="CT">CT</option>
+								<option value="DE">DE</option>
+								<option value="FL">FL</option>
+								<option value="GA">GA</option>
+								<option value="HI">HI</option>
+								<option value="ID">ID</option>
+								<option value="IL">IL</option>
+								<option value="IN">IN</option>
+								<option value="IA">IA</option>
+								<option value="KS">KS</option>
+								<option value="KY">KY</option>
+								<option value="LA">LA</option>
+								<option value="ME">ME</option>
+								<option value="MD">MD</option>
+								<option value="MA">MA</option>
+								<option value="MI">MI</option>
+								<option value="MN">MN</option>
+								<option value="MS">MS</option>
+								<option value="MO">MO</option>
+								<option value="MT">MT</option>
+								<option value="NE">NE</option>
+								<option value="NV">NV</option>
+								<option value="NH">NH</option>
+								<option value="NJ">NJ</option>
+								<option value="NM">NM</option>
+								<option value="NY">NY</option>
+								<option value="NC">NC</option>
+								<option value="ND">ND</option>
+								<option value="OH">OH</option>
+								<option value="OK">OK</option>
+								<option value="OR">OR</option>
+								<option value="PA">PA</option>
+								<option value="RI">RI</option>
+								<option value="SC">SC</option>
+								<option value="SD">SD</option>
+								<option value="TN">TN</option>
+								<option value="TX">TX</option>
+								<option value="UT">UT</option>
+								<option value="VT">VT</option>
+								<option value="VA">VA</option>
+								<option value="WA">WA</option>
+								<option value="WV">WV</option>
+								<option value="WI">WI</option>
+								<option value="WY">WY</option>
+							</select>
+						</div>
+						<div class="col-md-2">
+							City: <input type="text" name="city">
+						</div>
+						<div class="col-md-2">
+							Zip Code: <input type="text" name="zip code">
+						</div>
+						<div class="col-md-2">
+							Region: <input type="text" name="region"> <input
+								type="submit" name="Search">
+						</div>
+					</form>
+				</div>
+
+				<div class="row-fluid">
+					<div class="col-md-12">
+						<h3>Family Search Results</h3>
 					</div>
-					<div class="col-md-2">
-						City: <input type="text" name="city">
-					</div>
-					<div class="col-md-2">
-						Zip Code: <input type="text" name="zip code">
-					</div>
-					<div class="col-md-2">
-						Region: <input type="text" name="region"> <input
-							type="submit" name="Search">
-					</div>
-					<br>
-				</form>
-				<br>
-				
-				<table style="width: 1336px">
-					<tr>
-						<td></td>
-						<td><b>First Name</b></td>
-						<td><b>Middle Name</b></td>
-						<td><b>Last Name</b></td>
-						<td><b>Age</b></td>
-						<td><b>City</b></td>
-						<td><b>Zip Code</b></td>
-						<td><b>Region</b></td>
-					</tr>
-					<tr>
-						<td><b>1</b></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td><b>2</b></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td><b>3</b></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td><b>4</b></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-				</table>
-				<br>
+				</div>
+				<div class="row-fluid">
+					<table style="width: 1339px">
+						<tr>
+							<td></td>
+							<td><b>First Name</b></td>
+							<td><b>Middle Name</b></td>
+							<td><b>Last Name</b></td>
+							<td><b>Age</b></td>
+							<td><b>City</b></td>
+							<td><b>Zip Code</b></td>
+							<td><b>Region</b></td>
+						</tr>
+						<tr>
+							<td><b>1</b></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><b>2</b></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><b>3</b></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><b>4</b></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+					</table>
+				</div>
 			</div>
 		</div>
 	</div>
-	
+
+
+
 
 
 
