--- a/src/main/web-app/joinus.html
+++ b/src/main/web-app/joinus.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="ISO-8859-1">
 		<title>My Family: Join Us</title>
-		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" />
+		<link href="libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
 		<link href="css/index.css" type="text/css" rel="stylesheet"/>
 		<link href="css/main-layout.css" type="text/css" rel="stylesheet"/>
 	</head>
@@ -20,8 +20,11 @@
 		</div>
 		<div id="body-container" class="container-fluid">
 	  		<div class="row">
-				<div class="col-md-12">Join us
-					<form class="form-inline linsep">
+				<div class="col-md-12"><strong>Join us</strong>
+					<form>
+					<br>
+					  <div class="row">
+						<div class="col-md-6 col-md-offset-3">
 							<label for="name">Name: </label>
 							<input type="text" id="name"
 							placeholder="First">
@@ -29,6 +32,12 @@
 							placeholder="Middle">
 							<input type="text" id="name"
 							placeholder="Last">
+						</div>
+					 </div>
+					 <br>
+					 <br>
+					 <div class="row">
+					 	<div class="col-md-6 col-md-offset-3">
 							<label for="birthday">Birthday: </label>
 							<input type="text" id="month"
 							placeholder="Month">
@@ -36,7 +45,115 @@
 							placeholder="Day">
 							<input type="text" id="year"
 							placeholder="Year">
-					</form>
+						</div>
+					</div>
+							<br>
+							<br>
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3">
+							<label for="city">City: </label>
+							<input type="text" id="city"
+							placeholder="">
+							<label for="state">State: </label>
+							<select>
+							<option value="choose">choose</option>
+							<option value="AL">AL</option>
+							<option value="AK">AK</option>
+							<option value="AZ">AZ</option>
+							<option value="AR">AR</option>
+							<option value="CA">CA</option>
+							<option value="CO">CO</option>
+							<option value="CT">CT</option>
+							<option value="DE">DE</option>
+							<option value="FL">FL</option>
+							<option value="GA">GA</option>
+							<option value="HI">HI</option>
+							<option value="ID">ID</option>
+							<option value="IL">IL</option>
+							<option value="IN">IN</option>
+							<option value="IA">IA</option>
+							<option value="KS">KS</option>
+							<option value="KY">KY</option>
+							<option value="LA">LA</option>
+							<option value="ME">ME</option>
+							<option value="MD">MD</option>
+							<option value="MA">MA</option>
+							<option value="MI">MI</option>
+							<option value="MN">MN</option>
+							<option value="MS">MS</option>
+							<option value="MO">MO</option>
+							<option value="MT">MT</option>
+							<option value="NE">NE</option>
+							<option value="NV">NV</option>
+							<option value="NH">NH</option>
+							<option value="NJ">NJ</option>
+							<option value="NM">NM</option>
+							<option value="NY">NY</option>
+							<option value="NC">NC</option>
+							<option value="ND">ND</option>
+							<option value="OH">OH</option>
+							<option value="OK">OK</option>
+							<option value="OR">OR</option>
+							<option value="PA">PA</option>
+							<option value="RI">RI</option>
+							<option value="SC">SC</option>
+							<option value="SD">SD</option>
+							<option value="TN">TN</option>
+							<option value="TX">TX</option>
+							<option value="UT">UT</option>
+							<option value="VT">VT</option>
+							<option value="VA">VA</option>
+							<option value="WA">WA</option>
+							<option value="WV">WV</option>
+							<option value="WI">WI</option>
+							<option value="WY">WY</option>
+							</select>
+							<label for="Zipcode">Zipcode:</label>
+							<input type="text" id="zipcode"
+							placeholder="">
+							<label for="Region">Region: </label>
+							<input type="text" id="region"
+							placeholder="">
+						</div>
+					</div>
+							<br>
+							<br>
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3">
+							<label for="email">Email: </label>
+							<input type="text" id="email"
+							placeholder="">
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3">
+							<label for="username">Username: </label>
+							<input type="text" id="username"
+							placeholder="Create Username">
+						</div>
+					</div>
+					<br>
+					<br>
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3">
+							<label for="password">Password: </label>
+							<input type="password" id="password"
+							placeholder="Create Password">
+							<input type="text" id="password"
+							placeholder="Confirm Password">
+						</div>
+					</div>
+							<br>
+							<br>
+					<div class="row">
+						<div class="col-md-2 col-md-offset-8">
+							<input type="submit" id="submit"
+							placeholder="Submit">
+						</div>
+					</div>	
+							</form>
 				</div>
 			</div>
 		</div>
