added a new row and radio buttons.

--- a/src/main/web-app/familySearch.html
+++ b/src/main/web-app/familySearch.html
@@ -39,9 +39,30 @@
 						<div class="col-md-2">
 							Age: <input type="text" name="text">
 						</div>
+						<div class="col-md-2"></div>
 					</form>
 				</div>
-				<br>
+
+
+				<div class="row-fluid">
+
+					<div class="col-md-8 col-md-offset-2">
+						Do you wish to search for this person or people related.
+					<div class="col-md-6 "></div>
+					<form>
+					<input type="radio" name="text" value="">For
+					</form>
+					<div class="col-md-6 "></div>
+					<form>
+					<input type="radio" name="text" value="">Related
+					</form>
+					<div class="col-md-2"></div>
+					</div>
+					</div>
+					
+					
+
+
 				<div class="row-fluid">
 					<form>
 						<div class="col-md-2 col-md-offset-2">
@@ -110,6 +131,7 @@
 							Region: <input type="text" name="region"> <input
 								type="submit" name="Search">
 						</div>
+						<div class="col-md-2"></div>
 					</form>
 				</div>
 
