--- a/src/main/web-app/joinus.html
+++ b/src/main/web-app/joinus.html
@@ -21,11 +21,13 @@
 		<div id="body-container" class="container-fluid">
 	  		<div class="row">
 				<div class="col-md-12"><strong>Join us</strong>
-					<form>
+				<form>
 					<br>
 					  <div class="row">
-						<div class="col-md-6 col-md-offset-3">
-							<label for="name">Name: </label>
+						<div class="col-md-1 col-md-offset-3 texta">
+							<label for="name">Name:</label>
+						</div>
+						<div class="col-md-8">
 							<input type="text" id="name"
 							placeholder="First">
 							<input type="text" id="name"
@@ -37,8 +39,10 @@
 					 <br>
 					 <br>
 					 <div class="row">
-					 	<div class="col-md-6 col-md-offset-3">
-							<label for="birthday">Birthday: </label>
+					 	<div class="col-md-1 col-md-offset-3 texta">
+							<label for="birthday">Birthday:</label>
+						</div>
+						<div class="col-md-8">
 							<input type="text" id="month"
 							placeholder="Month">
 							<input type="text" id="day"
@@ -50,11 +54,14 @@
 							<br>
 							<br>
 					<div class="row">
-						<div class="col-md-6 col-md-offset-3">
-							<label for="city">City: </label>
+					
+						<div class="col-md-6 col-md-offset-4">
+							<label for="city">City:</label>
 							<input type="text" id="city"
 							placeholder="">
+
 							<label for="state">State: </label>
+							
 							<select>
 							<option value="choose">choose</option>
 							<option value="AL">AL</option>
@@ -111,7 +118,7 @@
 							<label for="Zipcode">Zipcode:</label>
 							<input type="text" id="zipcode"
 							placeholder="">
-							<label for="Region">Region: </label>
+							<label for="Country">Country: </label>
 							<input type="text" id="region"
 							placeholder="">
 						</div>
@@ -119,8 +126,10 @@
 							<br>
 							<br>
 					<div class="row">
-						<div class="col-md-6 col-md-offset-3">
+						<div class="col-md-1 col-md-offset-3 texta">
 							<label for="email">Email: </label>
+						</div>
+						<div class="col-md-8">
 							<input type="text" id="email"
 							placeholder="">
 						</div>
@@ -128,8 +137,10 @@
 					<br>
 					<br>
 					<div class="row">
-						<div class="col-md-6 col-md-offset-3">
+						<div class="col-md-1 col-md-offset-3 texta">
 							<label for="username">Username: </label>
+						</div>
+						<div class="col-md-8">
 							<input type="text" id="username"
 							placeholder="Create Username">
 						</div>
@@ -137,26 +148,28 @@
 					<br>
 					<br>
 					<div class="row">
-						<div class="col-md-6 col-md-offset-3">
+						<div class="col-md-1 col-md-offset-3 texta">
 							<label for="password">Password: </label>
+						</div>
+						<div class="col-md-8">
 							<input type="password" id="password"
 							placeholder="Create Password">
-							<input type="text" id="password"
+							<input type="password" id="password"
 							placeholder="Confirm Password">
 						</div>
 					</div>
 							<br>
 							<br>
 					<div class="row">
-						<div class="col-md-2 col-md-offset-8">
+						<div class="col-md-2 col-md-offset-9">
 							<input type="submit" id="submit"
 							placeholder="Submit">
 						</div>
 					</div>	
-							</form>
 				</div>
 			</div>
 		</div>
+		</form>
 		<div id="footer-container" class="container-fluid">
 			<div class="row">
 				<div class="span12">Footer</div>
