--- a/src/main/web-app/familySearch.html
+++ b/src/main/web-app/familySearch.html
@@ -46,16 +46,12 @@
 
 				<div class="row-fluid">
 
-					<div class="col-md-8 col-md-offset-2">
-						Do you wish to search for this person or people related.
-					<div class="col-md-6 "></div>
-					<form>
+					<div class="col-md-7 col-md-offset-3">
+						Do you wish to search for this person or people related to this person.
+					
 					<input type="radio" name="text" value="">For
-					</form>
-					<div class="col-md-6 "></div>
-					<form>
 					<input type="radio" name="text" value="">Related
-					</form>
+					
 					<div class="col-md-2"></div>
 					</div>
 					</div>
