Edit of front page body size.

--- a/src/main/web-app/index.html
+++ b/src/main/web-app/index.html
@@ -19,22 +19,24 @@
 			<div class="col-md-12">Primary navigation</div>
 		</div>
 	</div>
-	
-	<div id="body-container" class="container-fluid">
-	 body
-	</div>
-	  <div class="row">
+
+	<div id="body-container2" class="container-fluid">
+	<div class="row">
 		<div class="col-md-12"> 
-			<div class="row nestedcontent">
+				Body
+		</div>
+	 </div>
+	</div>
+	<div id="three-squares" class="container-fluid">
+	  <div class="row">
 				<div class="col-md-4 family">
 					<a href="familySearch.html">My Family Search</a>
 				</div>
 				<div class="col-md-4 join ">
-					<a href="joinus.html"> Join us </a>
+					<a href="joinus.html"> Join Us </a>
 				</div>
 				<div class="col-md-4 upcoming ">Upcoming Events</div>
-			</div>
-		</div>
+	 </div>
 	 </div>
 
 	<div id="footer-container" class="container-fluid">
@@ -42,7 +44,7 @@
 			<div class="col-md-12">Footer</div>
 		</div>
 	</div>
-			
+
 
 	</body>
 </html>
