--- a/src/main/web-app/index.html
+++ b/src/main/web-app/index.html
@@ -20,7 +20,7 @@
 		</div>
 	</div>
 
-	<div id="body-container2" class="container-fluid">
+	<div id="body-container" class="container-fluid">
 	<div class="row">
 		<div class="col-md-12"> 
 				Body
