--- a/src/main/web-app/familySearch.html
+++ b/src/main/web-app/familySearch.html
@@ -17,15 +17,15 @@
 			<div class="span12">Primary Navigation</div>
 		</div>
 	</div>
-	<div id="body-container" class="row-fluid">
-		<div id="family-search-container" class="row-fluid">
-			<div id="search-form-container" class="row-fluid">
-				<div class="row-fluid">
+	<div id="body-container" class="container-fluid">
+		<div id="family-search-container">
+			<div id="search-form-container">
+				<div class="row">
 					<div class="col-md-12">
 						<h3>Family Search</h3>
 					</div>
 				</div>
-				<div class="row-fluid">
+				<div class="row">
 					<form>
 						<div class="col-md-2 col-md-offset-2">
 							First Name: <input type="text" name="firstname">
@@ -44,10 +44,10 @@
 				</div>
 
 
-				<div class="row-fluid">
+				<div class="row">
 
 					<div class="col-md-7 col-md-offset-3">
-						Do you wish to search for this person or people related to this person.
+						Do you wish to search for this person or people related to this person?
 					
 					<input type="radio" name="text" value="">For
 					<input type="radio" name="text" value="">Related
@@ -59,7 +59,7 @@
 					
 
 
-				<div class="row-fluid">
+				<div class="row">
 					<form>
 						<div class="col-md-2 col-md-offset-2">
 							<name="state">States <select>
@@ -131,12 +131,12 @@
 					</form>
 				</div>
 
-				<div class="row-fluid">
+				<div class="row">
 					<div class="col-md-12">
 						<h3>Family Search Results</h3>
 					</div>
 				</div>
-				<div class="row-fluid">
+				<div class="row">
 					<table style="width: 1339px">
 						<tr>
 							<td></td>
@@ -199,8 +199,8 @@
 
 
 
-	<div id="footer-container" class="row-fluid">
-		<div class="row-fluid">
+	<div id="footer-container" class="row">
+		<div class="row">
 			<div class="span12">Footer</div>
 		</div>
 	</div>
