Took out two extra row-fluids

--- a/src/main/web-app/familySearch.html
+++ b/src/main/web-app/familySearch.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 	<div id="header-container" class="container-fluid">
-		<div class="row-fluid">
+		<div class="row">
 			<div class="span12">Header</div>
 		</div>
 	</div>
 	<div id="primary-navigation-container" class="container-fluid">
-		<div class="row-fluid">
+		<div class="row">
 			<div class="span12">Primary Navigation</div>
 		</div>
 	</div>
