--- a/src/main/web-app/familySearch.html
+++ b/src/main/web-app/familySearch.html
@@ -199,7 +199,7 @@
 
 
 
-	<div id="footer-container" class="row">
+	<div id="footer-container" class="container-fluid">
 		<div class="row">
 			<div class="span12">Footer</div>
 		</div>
