--- a/src/main/web-app/events.html
+++ b/src/main/web-app/events.html
@@ -14,7 +14,6 @@
 			<div class="col-md-12">Header</div>
 		</div>
 	</div>
-	
 	<div id="primary-navigation-container" class="container-fluid">
 			<div class="row">
 				<div class="col-md-1">Primary navigation </div>
@@ -38,24 +37,11 @@
 	<div id="body-container" class="container-fluid">
 	<div class="row">
 		<div class="col-md-12"> 
-				Body
+				<center>Upcoming events coming soon!</center>
 		</div>
 	 </div>
 	</div>
-	<div id="three-squares" class="container-fluid">
-	  <div class="row">
-				<div class="col-md-4 family">
-					<a href="familySearch.html">My Family Search</a>
-				</div>
-				<div class="col-md-4 join ">
-					<a href="Signup.html"> Sign Up! </a>
-				</div>
-				<div class="col-md-4 upcoming ">
-				<a href="events.html"> Upcoming events </a>
-				</div>
-	 </div>
-	 </div>
-
+	
 	<div id="footer-container" class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">Footer</div>
