--- a/src/main/web-app/familySearch.html
+++ b/src/main/web-app/familySearch.html
@@ -13,8 +13,22 @@
 		</div>
 	</div>
 	<div id="primary-navigation-container" class="container-fluid">
-		<div class="row">
-			<div class="span12">Primary Navigation</div>
+			<div class="row">
+				<div class="col-md-1">Primary navigation </div>
+				<div class="col-md-11">
+				  <span style="margin-right: 10px; text-align: left;">			
+					<a href="index.html"> Home </a> 
+				  </span>
+				  <span style="margin-right: 10px; text-align: left;">
+					<a href="familySearch.html"> My Family Search! </a>
+				  </span>
+				  <span style="margin-right: 10px; text-align: left;">
+					<a href="Signup.html"> Sign Up! </a>
+				  </span>
+				  <span style="margin-right: 10px; text-align: left;">
+					<a href="events.html"> Upcoming Events! </a>
+				  </span>
+				</div>
 		</div>
 	</div>
 	<div id="body-container" class="container-fluid">
