Added main-view-container and set min-height to #body-container in to main-layout.css.

--- a/src/main/web-app/index.html
+++ b/src/main/web-app/index.html
@@ -1,60 +1,58 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="ISO-8859-1">
-		<title>Main Page: My Family</title>
+<head>
+<meta charset="ISO-8859-1">
+<title>Main Page: My Family</title>
 
-		<link href="libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-		<link href="css/index.css" type="text/css" rel="stylesheet"/>
-		<link href="css/main-layout.css" type="text/css" rel="stylesheet"/>
-	</head>
-	<body>
+<link href="libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css"
+	rel="stylesheet" type="text/css" />
+<link href="css/index.css" type="text/css" rel="stylesheet" />
+<link href="css/main-layout.css" type="text/css" rel="stylesheet" />
+</head>
+<body>
 	<div id="header-container" class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">Header</div>
 		</div>
 	</div>
-	
+
 	<div id="primary-navigation-container" class="container-fluid">
-			<div class="row">
-				<div class="col-md-1">Primary navigation </div>
-				<div class="col-md-11">
-				  <span style="margin-right: 10px; text-align: left;">			
-					<a href="index.html"> Home </a> 
-				  </span>
-				  <span style="margin-right: 10px; text-align: left;">
-					<a href="familySearch.html"> My Family Search! </a>
-				  </span>
-				  <span style="margin-right: 10px; text-align: left;">
-					<a href="Signup.html"> Sign Up! </a>
-				  </span>
-				  <span style="margin-right: 10px; text-align: left;">
-					<a href="events.html"> Upcoming Events! </a>
-				  </span>
+		<div class="row">
+			<div class="col-md-1">Primary navigation</div>
+			<div class="col-md-11">
+				<span style="margin-right: 10px; text-align: left;"> <a
+					href="index.html"> Home </a>
+				</span> <span style="margin-right: 10px; text-align: left;"> <a
+					href="familySearch.html"> My Family Search! </a>
+				</span> <span style="margin-right: 10px; text-align: left;"> <a
+					href="Signup.html"> Sign Up! </a>
+				</span> <span style="margin-right: 10px; text-align: left;"> <a
+					href="events.html"> Upcoming Events! </a>
+				</span>
+			</div>
+		</div>
+	</div>
+
+	<div id="body-container" class="container-fluid">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="row">
+					<div id="main-view-container">&nbsp;</div>
 				</div>
 			</div>
 		</div>
-
-	<div id="body-container" class="container-fluid">
-	<div class="row">
-		<div class="col-md-12"> 
-				Body
-		</div>
-	 </div>
-	</div>
-	<div id="three-squares" class="container-fluid">
-	  <div class="row">
-				<div class="col-md-4 family">
-					<a href="familySearch.html">My Family Search</a>
-				</div>
-				<div class="col-md-4 join ">
-					<a href="Signup.html"> Sign Up! </a>
-				</div>
-				<div class="col-md-4 upcoming ">
+		<div class="row">
+			<div class="col-md-4 family">
+				<a href="familySearch.html">My Family Search</a>
+			</div>
+			<div class="col-md-4 join ">
+				<a href="Signup.html"> Sign Up! </a>
+			</div>
+			<div class="col-md-4 upcoming ">
 				<a href="events.html"> Upcoming events </a>
-				</div>
-	 </div>
-	 </div>
+			</div>
+		</div>
+	</div>
 
 	<div id="footer-container" class="container-fluid">
 		<div class="row">
@@ -63,5 +61,5 @@
 	</div>
 
 
-	</body>
+</body>
 </html>
