Add nav bar to signup.html and fixed relative path

--- a/src/main/web-app/index.html
+++ b/src/main/web-app/index.html
@@ -25,7 +25,7 @@
 				</span> <span style="margin-right: 10px; text-align: left;"> <a
 					href="familySearch.html"> My Family Search! </a>
 				</span> <span style="margin-right: 10px; text-align: left;"> <a
-					href="Signup.html"> Sign Up! </a>
+					href="signup.html"> Sign Up! </a>
 				</span> <span style="margin-right: 10px; text-align: left;"> <a
 					href="events.html"> Upcoming Events! </a>
 				</span>
