--- a/src/main/web-app/familySearch.html
+++ b/src/main/web-app/familySearch.html
@@ -151,7 +151,7 @@
 									</div>
 								</div>
 								<div class="row">
-									<table style="width: 1339px">
+									<table>
 										<tr>
 											<td></td>
 											<td><b>First Name</b></td>
