Nearly finished the newest layout within event.html.

--- a/src/main/web-app/events.html
+++ b/src/main/web-app/events.html
@@ -47,10 +47,17 @@
 					</h1>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-3 texta">
+					<b>General Event Information</b>
+				</div>
+				<div class="col-md-9"></div>
+			</div>
+			
 			<form>
 				<div class="row">
 					<div class="col-md-1 col-md-offset-2">
-						<label for="Name">Name your event:</label>
+						Name:
 					</div>
 					<div class="col-md-2 ">
 						<input type="text" id="name" placeholder="" class="input-space">
@@ -60,20 +67,41 @@
 				<br>
 				<div class="row">
 					<div class="col-md-1 col-md-offset-2 texta">
-						<label for="name">Description:</label>
+						Description:
 					</div>
 					<div class="col-md-8">
 						<textarea rows="5" cols="75"></textarea>
 					</div>
 					<div class="col-md-1"></div>
 				</div>
+				<br><br>
+				<div class="row">
+					<div class="col-md-2 col-md-offset-2">
+						Please check if:
+					</div>
+					<div class="col-md-8"></div>
+				</div>
+				<div class="row">
+					<div class="col-md-2 col-md-offset-3 ">
+						<input type="checkbox" name="vehicle" value="ginvite">Guests
+						can invite other guests
+					</div>
+					<div class="col-md-2 ">
+						<input type="checkbox" name="vehicle" value="ginvite">Guests
+						can seat other guests
+					</div>
+					<div class="col-md-5"></div>
+				</div>
 				<br> <br>
 				<div class="row">
-					<div class="col-md-1 col-md-offset-2">
-						<label for="Location">Event Location: </label>
+					<div class="col-md-3 texta">
+						<label for="Location">Event Location </label>
 					</div>
-					<div class="col-md-9">
-						<label for="Street">Street Address: </label>
+					<div class="col-md-9"></div>
+				</div>
+				<div class="row">
+					<div class="col-md-9 col-md-offset-3">
+						Street Address 1: 
 					</div>
 				</div>
 
@@ -86,7 +114,7 @@
 
 				<div class="row">
 					<div class="col-md-2 col-md-offset-3 linesep">
-						<label for="Street">Street Address 2: </label>
+						Street Address 2: 
 					</div>
 					<div class="col-md-7"></div>
 				</div>
@@ -98,16 +126,16 @@
 				</div>
 				<div class="row">
 					<div class="col-md-1 col-md-offset-3">
-						<label for="city">City: </label>
+						ity: 
 					</div>
 					<div class="col-md-1 spacing5" text-align="center";>
-						<label for="state">State: </label>
-					</div>
+						State: 					
+						</div>
 					<div class="col-md-1 ">
-						<label for="zipcode">Zipcode:</label>
+						Zipcode:
 					</div>
 					<div class="col-md-1 spacing5">
-						<label for="Country">Country: </label>
+						Country
 					</div>
 					<div class="col-md-5"></div>
 				</div>
@@ -188,11 +216,17 @@
 				</div>
 				<br> <br>
 				<div class="row">
-					<div class="col-md-2 col-md-offset-3 textc">
-						<label for="sdate">Event Starting Date: </label>
+					<div class="col-md-3 texta">
+					<label for="water-bottle">Event Date and Time</label>
 					</div>
-					<div class="col-md-2 textc">
-						<label for="stime">Event Start Time:</label>
+					<div class="col-md-5"></div>
+				</div>
+				<div class="row">
+					<div class="col-md-2 col-md-offset-3 textb">
+						Event Starting Date:
+					</div>
+					<div class="col-md-2 textb">
+						Event Start Time:
 					</div>
 					<div class="col-md-5"></div>
 				</div>
@@ -342,10 +376,10 @@
 				<br> <br>
 				<div class="row">
 					<div class="col-md-2 col-md-offset-3 textc">
-						<label for="sdate">Event Ending Date: </label>
+						Event Ending Date: 
 					</div>
 					<div class="col-md-2 textc">
-						<label for="stime">Event End Time:</label>
+						Event End Time:
 					</div>
 					<div class="col-md-5"></div>
 				</div>
@@ -575,24 +609,6 @@
 						<input type="text" id="htmlLink" placeholder="Enter URL">
 					</div>
 					<div class="col-md-2"></div>
-				</div>
-				<br> <br>
-				<div class="row">
-					<div class="col-md-2 col-md-offset-2">
-						<label for="additional-guests">Please check if:</label>
-					</div>
-					<div class="col-md-8"></div>
-				</div>
-				<div class="row">
-					<div class="col-md-2 col-md-offset-3 ">
-						<input type="checkbox" name="vehicle" value="ginvite">Guests
-						can invite other guests
-					</div>
-					<div class="col-md-2 ">
-						<input type="checkbox" name="vehicle" value="ginvite">Guests
-						can seat other guests
-					</div>
-					<div class="col-md-5"></div>
 				</div>
 				<br> <br>
 				<div class="row">
