Updates events.html and upcomingEvents.js to add form valdiation to the first two text fields. Alignment is not corret as of now

--- a/src/main/web-app/events.html
+++ b/src/main/web-app/events.html
@@ -57,8 +57,7 @@
 			<div class="row">
 				<div class="col-md-1 col-md-offset-2">Name:</div>
 				<div class="col-md-2 ">
-					<input type="text" id="name" placeholder="" class="input-space"
-						required>
+					<input type="text" id="name" placeholder="" class="input-space">
 				</div>
 				<div class="col-md-7 textb">
 					<p id="nameError"></p>
@@ -68,9 +67,11 @@
 			<div class="row">
 				<div class="col-md-1 col-md-offset-2 texta">Description:</div>
 				<div class="col-md-8">
-					<textarea id="description" rows="5" cols="75" required></textarea>
+					<textarea id="description" rows="5" cols="75"></textarea>
 				</div>
-				<div class="col-md-1"></div>
+				<div class="col-md-1 textb">
+					<p id="descriptionError" class="textb"></p>
+				</div>
 			</div>
 			<br> <br>
 			<div class="row">
@@ -78,7 +79,9 @@
 				<div class="col-md-7" style="width: 100">
 					<input type="text" id="htmlLink" placeholder="Enter URL">
 				</div>
-				<div class="col-md-2"></div>
+				<div class="col-md-2 textb">
+					
+				</div>
 			</div>
 			<br> <br>
 			<div class="row">
